--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,6 @@
 build:
   docker:
-    web: ./devcontainer/Dockerfile
-run:
-  web: bundle exec puma -C config/puma.rb
+    release:
+       dockerfile: Dockerfile
+       target: builder
+    web: Dockerfile
